aligned login button with ads (almost), fixed a margin

--- a/styles.css
+++ b/styles.css
@@ -65,7 +65,7 @@ input[type=submit]:hover {
 }
     div.login{
         height:100%;
-        margin:0 auto;
+        margin:0 auto 0 0.9%;
         float:left;
         width: 20%;
     }
@@ -160,7 +160,7 @@ ul {
 }
 
 .login button {
-    float :right;
+    float: left;
     margin-right:4%;
     margin-left: 0.5%;
     background-color: var(--button-color);
